<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harshrane09_gmail_com"/>
            <TextView
                android:id="@+id/tvFN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harshvardhan"
                />
            <TextView
                android:id="@+id/tvLN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rane"/>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/tvImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/profile_pic"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
