<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/create_a_new_account"
        android:textColor="#000"
        android:textSize="25sp"
        app:fontFamily="@font/aclonica"
        tools:ignore="MissingConstraints"
         />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:cardElevation="@dimen/dimen_8"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginRight="@dimen/dimen_8"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_fullname"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginRight="@dimen/dimen_8"
            android:layout_marginTop="80dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email_address"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="150dp"
            android:id="@+id/addressTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginRight="@dimen/dimen_8"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_address"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/loginLinkId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_click_here_to_login"
            android:layout_marginTop="220dp"
            android:gravity="center_horizontal"
            android:onClick="login_action"
            android:clickable="true"
            android:textColor="@color/colorOrange"
            android:focusable="true"
            tools:ignore="OnClick" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginRight="@dimen/dimen_8"
            />

    </androidx.cardview.widget.CardView>
</RelativeLayout>