<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/main_portal"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_20"
        tools:ignore="UnusedAttribute" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginLeft="290dp"
        android:layout_marginRight="@dimen/dimen_8"
        android:layout_marginStart="290dp"
        android:layout_marginEnd="@dimen/dimen_8" />

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/colorOrange"
        android:orientation="horizontal">
    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/dashboardId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/dimen_8"
            app:cardCornerRadius="30dp"
            app:cardElevation="@dimen/dimen_8"
            tools:ignore="UnusedAttribute">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_home_24"
                    android:contentDescription="@string/dashboardimage"
                    app:tint="#3CB9FC"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/dashboard"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/regid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/dimen_8"
            app:cardCornerRadius="30dp"
            app:cardElevation="9dp" tools:targetApi="lollipop"
            tools:ignore="InvalidId">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/regimage"
                    app:tint="#ffff00"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/registration"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/dimen_8"
            app:cardCornerRadius="30dp"
            app:cardElevation="9dp" tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_person_24"
                    android:contentDescription="@string/profileimage"
                    app:tint="#00207F"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/profile"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mapId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/dimen_8"
            app:cardCornerRadius="30dp"
            app:cardElevation="9dp"
            tools:ignore="UnusedAttribute">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_map_24"
                    android:contentDescription="@string/mapimage"
                    app:tint="#a4c639" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/location"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
    </LinearLayout>
</RelativeLayout>
